<resources>
    <string name="app_name">Sige</string>
    <string name="name_usuario">Correo electrónico o usuario</string>
    <string name="name_clave">Contraseña</string>
    <string name="name_my_events">Registros</string>
    <string name="name_send">Sincronizar</string>
    <string name="name_delete_data_uploaded">Eliminar inf. sinc.</string>
    <string name="name_close_sesion">Cerrar sesión</string>
    <string name="name_saneamiento">Saneamiento</string>
    <string name="name_img">imagen</string>
    <string name="name_type">TIPO :</string>
    <string name="name_fecha">FECHA :</string>
    <string name="name_ubicacion">Ubicación</string>
    <string name="name_citie">Ciudad</string>
    <string name="name_sector">Sector</string>
    <string name="name_inspector">Inspector</string>
    <string name="name_stree">Calle</string>
    <string name="name_otra_ubicacion">Especificar otra ubicación</string>
    <string name="name_number">Numero</string>
    <string name="name_ref">Referencia</string>
    <string name="name_obs">Observación</string>
    <string name="name_foto">Fotos</string>
    <string name="name_dpto">Departamento</string>
    <string name="name_selected">--Seleccione--</string>
    <string name="name_type_detection">Tipo de detección</string>
    <string name="name_type_obra">Tipo de obra</string>
    <string name="name_type_of">Tipo de </string>
    <string name="name_deteccion">DETECCION</string>
    <string name="name_obra">OBRA</string>
    <string name="name_os">Orden de servicio</string>
    <string name="name_fecha_init">Fecha </string>
    <string name="name_fecha_fin">Fecha cierre de obra </string>
    <string name="name_fecha_init_obra">Fecha inicio de obra </string>
    <string name="name_obs_preliminar">OBSERVACION PRELIMINAR</string>
    <string name="name_date_obra">Creado el</string>
    <string name="name_address">DIRECCION</string>
    <string name="name_deteccion_title">registro</string>
    <string name="name_obra_title">obra</string>
    <string name="name_send_deteccion">Deteccion(es) </string>
    <string name="name_send_obra">Obra(s)</string>
    <string name="name_send_image">Imagen(es) </string>
    <string name="name_number_elements">Elementos pendientes a enviar</string>
    <string name="name_usuario_padron">Usuario e identificación de servicios</string>
    <string name="lbl_padrones">Padrones</string>
    <string name="lbl_regimen">Régimen</string>
    <string name="lbl_departamento">Departamento</string>
    <string name="lbl_localidad_barrio">Localidad / Barrio</string>
    <string name="lbl_direccion">Dirección</string>
    <string name="lbl_nro_referencia">Nro. Referencia</string>
    <string name="lbl_area_terreno">Área terreno (m2)</string>
    <string name="lbl_area_edificada">Área edificada (m2)</string>
    <string name="lbl_unidad">Unidad</string>
    <string name="lbl_esquina">Esquina</string>
    <string name="lbl_inf_gen">Información General</string>
    <string name="lbl_inf_insp">Información de la Inspección - visita in-situ</string>
    <string name="lbl_inf_const">Información de las Construcciones</string>
    <string name="lbl_rep_fot">Reporte fotográfico</string>
    <string name="lbl_vis_int_inm">Se realizó visita al interior del inmueble</string>
    <string name="lbl_reformas">Posee reformas con respecto a Catastro</string>
    <string name="lbl_area">Área aproximada y alcance</string>
    <string name="lbl_patologias">Se detectan patologías en la construcción</string>
    <string name="lbl_categoria">Categoría</string>
    <string name="lbl_descripcion">Descripción</string>
    <string name="lbl_estado">Estado</string>
    <string name="lbl_si">Si</string>
    <string name="lbl_no">No</string>
    <string name="lbl_humedades">Humedades</string>
    <string name="lbl_grietas">Grietas y fisuras</string>
    <string name="lbl_inst_func">Instalaciones funcionales</string>
    <string name="lbl_sanitarias">Sanitarias</string>
    <string name="lbl_electrica">Eléctricas</string>
    <string name="lbl_observaciones">Observaciones</string>
    <string name="lbl_add_constr">Agregar construcción</string>
    <string name="lbl_destino">Destino</string>
    <string name="lbl_nivel">Nivel</string>
    <string name="lbl_habitaciones">Habitaciones</string>
    <string name="lbl_servicios">Servicios</string>
    <string name="lbl_area_edif">Área edificada</string>
    <string name="lbl_anio">Año</string>
    <string name="lbl_cubierta">Cubierta</string>
    <string name="name_button_init_sesion">Iniciar sesión</string>
    <string name="name_button_aceptar">Aceptar</string>
    <string name="name_button_cancelar">Cancelar</string>
    <string name="name_button_yes">Si</string>
    <string name="name_button_no">No</string>
    <string name="name_button_delete_event">Eliminar evento</string>
    <string name="name_button_save_gps">Guardar sin cordenadas</string>
    <string name="name_button_save">Guardar</string>
    <string name="name_button_add">Agregar</string>
    <string name="name_button_wait">Esperar</string>
    <string name="titulo_atencion">Atención</string>
    <string name="titulo_confirmacion">Confirmación</string>
    <string name="titulo_tab_detecion">Registro de preexistencia</string>
    <string name="titulo_tab_obra">Obra</string>
    <string name="titulo_new_event">Nuevo </string>
    <string name="titulo_update_event">Editar </string>
    <string name="titulo_file_sincro">Información a enviar</string>
    <string name="titulo_new_saneamiento">Nuevo saneamiento</string>
    <string name="msj_error_user">Usuario y/o contraseña incorrectos o active su conección a internet</string>
    <string name="msj_error_usuario_sin_dato">Ingrese un correo y/o contraseña</string>
    <string name="msj_autenticate_user">Verificando &#8230;</string>
    <string name="msj_user_pssw_mistake">Correo y/o contraseña incorrectos</string>
    <string name="msj_without_permits">Al parecer el usuario ingresado no cuenta con permisos para ingresar</string>
    <string name="msj_error_json_server">Tenemos un incoveniente al verificar su usuario y contraseña en el servidor</string>
    <string name="msj_server_off">Tiempo de conexión agotado </string>
    <string name="msj_error_json_local">Tenemos un incoveniente al verificar tu usuario y contraseña</string>
    <string name="msj_conection_time_out">Tiempo de conexión agotado, verifique su conección de internet</string>
    <string name="msj_retry">Reintentar conexión</string>
    <string name="msj_out_app">¿Esta seguro de salir de la aplicación?</string>
    <string name="msj_empy_list_events">Aún no tienes registros ingresados</string>
    <string name="msj_delete_evento">¿Esta seguro de eliminar el evento?</string>
    <string name="msj_save_picture">Se guardo la imagen con éxito. ¿Deseas agregar un comentario a la imagen?</string>
    <string name="msj_close_sesion">¿Estás seguro de querer cerrar sesión?</string>
    <string name="msj_eliminar_data_enviada">¿Desea eliminar la información ya enviada al servidor?</string>
    <string name="msj_send_data">¿Estás seguro enviar la información?</string>
    <string name="msj_out_form_event_new">¿Deseas cancelar el registro actual?</string>
    <string name="msj_out_form_saneamiento">¿Desea cancelar el registro actual?</string>
    <string name="msj_out_form_event_update">¿Deseas cancelar la edición del evento?</string>
    <string name="msj_delete_picture">¿Esta seguro de eliminar la foto?</string>
    <string name="msj_save">¿Deseas guardar el registro? </string>
    <string name="msj_only_local">Por favor desactive el internet o cualquier conexion a internet</string>
    <string name="msj_sin_gps">Debes activar su GPS para continuar</string>
    <string name="msj_save_sin_coordenadas">No se detectó cordenadas GPS</string>
    <string name="msj_init_envio">Iniciando envio de informacion</string>
    <string name="msj_synchronization">¿Estás seguro de enviar la información?</string>
    <string name="msj_send_ok">Informacion enviada</string>
    <string name="msj_send_check_data">Verificando información a enviar</string>
    <string name="msj_load_data">Cargando datos</string>
    <string name="msj_sending_data">Enviando información</string>
    <string name="msj_sending">Enviando </string>
    <string name="msj_compress_picture">imagenes de </string>
    <string name="msj_not_edit">El evento seleccionado ya ha sido enviado a la central, por ello no puede ser editado</string>
    <string name="msj_disable_button_send">Se esta enviando información a la central </string>
    <string name="msj_images_not_send"> imagen(es) enviadas</string>
    <string name="hint_description_picture">Pulsa aquí para agregar una observación </string>
    <string name="hint_number_os">Número de servicio </string>
    <string name="hint_nombre_usuario">Nombre de usuario</string>
    <string name="hint_med_pot">Medidor de agua potable</string>
    <string name="hint_ident_serv">Identificación de servicio</string>
    <string name="hint_padron">Padrón</string>
    <string name="hint_observacion_preliminar">Observación preliminar</string>
    <string name="hint_lado_izquierdo">Lado izquierdo</string>
    <string name="hint_lado_derecho">Lado derecho</string>
    <string name="hint_otro">Otros</string>
    <string name="hint_escriba_aqui">Escriba aquí</string>
    <string name="hint_otra_ciudad">Otra ciudad</string>
    <string name="hint_tipo_efluente">Indica el tipo de efluente</string>
    <string name="hint_en_pavimento">En pavimento (cm)</string>
    <string name="hint_en_vereda">En vereda (cm)</string>
    <string name="label_observacion_preliminar">Observación preliminar</string>
    <string name="label_saneamiento">Inspección previa de saneamiento</string>
    <string name="label_tipo_saneamiento">Saneamiento</string>
    <string name="label_datos_generales">Datos generales</string>
    <string name="label_tipo_conexion">Tipo de conexión alcantarillado</string>
    <string name="label_conexion_prevista">Conexión prevista</string>
    <string name="label_camara_vereda">Cámara en vereda</string>
    <string name="label_colector_calle">Colector por calle</string>
    <string name="label_colector_vereda">Colector por vereda</string>
    <string name="label_efluente">Efluente decantado</string>
    <string name="label_ubicacion_limite">Ubicación respecto a límite de propiedad</string>
    <string name="label_corte_pavimento">Corte en pavimento</string>
    <string name="label_corte_vereda">Corte en vereda</string>
    <string name="label_empty"> </string>
    <string name="label_largo">Largo (m)</string>
    <string name="label_ancho">Ancho (m)</string>
    <string name="label_tierra">Tierra</string>
    <string name="label_baldosa">Baldosas</string>
    <string name="label_hormigon">Hormigón</string>
    <string name="label_cesped">Cesped</string>
    <string name="label_x"> x </string>
    <string name="label_carpeta">Carpeta</string>
    <string name="label_riego">Riego</string>
    <string name="label_tosca">Tosca</string>
    <string name="label_prof_max_sifon">Profundidad máxima en salida del sifón</string>
    <string name="label_camara_pronta">Cámara Nº1 pronta</string>
    <string name="label_ubicacion_camara">Ubicación de la Cámara Nº1 referida al padrón</string>
    <string name="label_si">Si</string>
    <string name="label_no">No</string>
    <string name="label_en_proceso">En proceso</string>
    <string name="label_diametro_conexion">Diámetro de conexión (mm)</string>
    <string name="label_diametro_colector">Diámetro de colector</string>
    <string name="label_material_colector">Material del colector</string>
    <string name="label_prof_colector">Profundidad del colector</string>
    <string name="label_insp_int_san">Inspección de Instalación Interna</string>
    <string name="label_cnx_pluvial">Conexiones pluviales</string>
    <string name="label_dcg_x_bombeo">Descarga por bombeo</string>
</resources>